@@ -73,20 +73,6 @@ src_install() {
 	readme.gentoo_create_doc
 }
 
-site-start-modified-p() {
-	case $(cksum <"${EROOT}${SITELISP}/site-start.el") in
-		# checksums of auto-generated site-start.el files
-		"2098727038 349") return 1 ;;	# elisp-common.eclass
-		"3626264063 355") return 1 ;;	# emacs-common-gentoo-1.0 (cvs rev 1.1)
-		"3738455534 394") return 1 ;;	# emacs-common-gentoo-1.0 (cvs rev 1.6)
-		"4199862847 394") return 1 ;;	# emacs-common-gentoo-1.1
-		"2547348044 394") return 1 ;;	# emacs-common-gentoo-1.2
-		"2214952934 397") return 1 ;;	# emacs-common-gentoo-1.2-r1
-		"3917799317 397") return 1 ;;	# emacs-common-gentoo-1.2-r2
-		*) return 0 ;;
-	esac
-}
-
 pkg_preinst() {
 	# make sure that site-gentoo.el exists since site-start.el requires it
 	if [[ ! -d ${EROOT}${SITELISP} ]]; then
@@ -102,41 +88,11 @@ pkg_preinst() {
 		for f in /var/games/emacs/{snake,tetris}-scores; do
 			if [[ -e ${EROOT}${f} ]]; then
 				cp "${EROOT}${f}" "${ED}${f}" || die
-			elif [[ -e ${EROOT}/var/lib${f#/var} ]]; then
-				# backwards compatibility
-				cp "${EROOT}/var/lib${f#/var}" "${ED}${f}" || die
 			fi
 			touch "${ED}${f}" || die
 			chgrp gamestat "${ED}${f}" || die
 			chmod g+w "${ED}${f}" || die
 		done
-
-		if [[ -d ${EROOT}/var/games && -z $(find "${EROOT}"/var/games \
-				-maxdepth 0 -uid 0 -gid 0 -perm 755 -print) ]]; then
-			chown 0:0 "${EROOT}"/var/games || die
-			chmod 755 "${EROOT}"/var/games || die
-		fi
-		if has 1.4-r1 ${REPLACING_VERSIONS} \
-				&& [[ -d ${EROOT}/var/games/emacs ]]; then
-			elog "Updating owner and permissions of score file directory."
-			chown 0:gamestat "${EROOT}"/var/games/emacs || die
-			chmod 775 "${EROOT}"/var/games/emacs || die
-		fi
-	fi
-
-	if [[ -e ${EROOT}${SITELISP}/site-start.el ]]; then
-		ewarn "The location of the site startup file for Emacs has changed to"
-		ewarn "/etc/emacs/site-start.el."
-		if site-start-modified-p; then
-			eerror "Locally modified ${SITELISP}/site-start.el file found."
-			eerror "If this file contains your own customisation, you should"
-			eerror "move it to /etc/emacs/. In any case, you must remove the"
-			eerror "file from the old location."
-			die "Cannot continue unless ${SITELISP}/site-start.el is removed."
-		else
-			ewarn "Removing the old ${SITELISP}/site-start.el file."
-			rm -f "${EROOT}${SITELISP}/site-start.el"
-		fi
 	fi
 }
 
