@@ -2,6 +2,9 @@
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  22 Feb 2015; Ulrich Müller <ulm@gentoo.org> emacs-common-gentoo-9999.ebuild:
+  Remove all backwards compatibility code from the live ebuild.
+
   22 Feb 2015; Ulrich Müller <ulm@gentoo.org>
   +emacs-common-gentoo-9999.ebuild, -emacs-common-gentoo-9999-r1.ebuild:
   Sync from Portage tree.
